Add shortkey for tmux copy-mode
C-v for quickly enter copy-mode

Signed-off-by: n3k0fi5t <r05922078@ntu.edu.tw>

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -44,6 +44,7 @@ setw -g pane-base-index 1
 
 # C-v (the original '[' is still availible) to enter vi-mode
 bind-key [ copy-mode \; set mouse off
+bind-key -n C-v copy-mode \; set mouse off
 bind-key C-v copy-mode \; set mouse off
 
 # copy-mode
