--- a/.tmux.conf
+++ b/.tmux.conf
@@ -47,8 +47,11 @@ bind-key [ copy-mode \; set mouse off
 bind-key -n C-v copy-mode \; set mouse off
 bind-key C-v copy-mode \; set mouse off
 
-# copy-mode
+# vi mode
 setw -g mode-keys vi
+set -g status-keys vi
+
+# copy-mode
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-pipe "reattach-to-user-namespace pbcopy"
 bind-key -T copy-mode-vi C-v send -X begin-selection \; send -X rectangle-toggle
@@ -58,4 +61,24 @@ bind-key -T copy-mode-vi C-k send -X halfpage-up
 bind-key -T copy-mode-vi C-j send -X halfpage-down
 bind-key -T copy-mode-vi C-c send -X clear-selection
 
+# status bar
+# default statusbar colors
+set -g status-style fg=white,bg=default
 
+# default window title colors
+set -g window-status-style fg=white,bg=default,dim
+
+# active window title colors
+set -g window-status-current-style fg=cyan,bg=default,bright,underscore
+
+# command/message line colors
+set -g message-style fg=white,bg=black,bright
+
+# what to be displayed on the right status
+set -g status-interval 1
+set -g status-right ' } %Y-%m-%d %H:%M:%S'
+set -g status-right-length 60
+
+# what to be displayed on the left status
+set -g status-left-length 30
+set-option -g status-left "#[fg=green]#(echo $USER)#[default].#[fg=blue]#h#[default] { "
